test/parse/bad-string-eof.txt
;;; ERROR: 1
(module (func) (export "
(;; STDERR ;;;
out/test/parse/bad-string-eof.txt:2:25: error: newline in string
(module (func) (export "
                        ^
out/test/parse/bad-string-eof.txt:3:2: error: syntax error, unexpected EOF, expecting TEXT
;;; STDERR ;;)
